ongoing search reimplementation
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@32488 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -287,6 +287,16 @@ Webpage.indexbrowser.profkat.label.profkat_last_professorship=zuletzt
 Webpage.indexbrowser.profkat.label.profkat_last_faculty_class=zuletzt
 Webpage.indexbrowser.profkat.label.profkat_state_msg=Status
 
+Webpage.search.result.label.profkat_period=Prof. in Rostock
+Webpage.search.result.label.profkat_last_professorship=zuletzt
+Webpage.search.result.label.profkat_last_faculty_class=zuletzt
+Webpage.search.result.label.profkat_status_msg=Status
+
+Webpage.search.title.profkat-simple.xed=Einfache Suche
+Webpage.search.title.profkat-extended.xed=Komplexe Suche
+Webpage.search.title.profkat-searchbox.xed=Suche
+
+
 
 Webpage.editor.title.simple=Einfache Suche über die Daten im Professorenkatalog
 Webpage.editor.title.extended=Erweiterte Suche über die Daten im Professorenkatalog
