search masks with xed framework
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@32813 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -37,7 +37,10 @@ Editor.Search.Label.SubjectProf=Fachklassifikation
 Editor.Search.Label.ProfTypes=Art der Professur
 Editor.Search.Label.ProfStates=Status des Eintrages
 Editor.Search.Label.Professortime=Professor in Rostock
+Editor.Search.Label.Professortime.from=Berufung
+Editor.Search.Label.Professortime.to=Ausscheiden
 Editor.Search.Label.Lifetime=gelebt
+Editor.Search.Label.Lifetime.Data=Lebensdaten
 Editor.Search.Label.Facultytime=Fakultätsangehörigkeit
 Editor.Search.Label.Time.between=zwischen/seit
 Editor.Search.Label.Time.betweenAnd=und
@@ -66,7 +69,7 @@ OMD.CPR.homepages=Homepage
 OMD.CPR.surnames=Namensvarianten
 OMD.CPR.firstnames=weitere Vornamen
 OMD.CPR.lifetimes=Lebensdaten
-OMD.CPR.birthplace=Geburtsort
+OMD.CPR.birthplace=geboren in
 OMD.CPR.births=Daten zur Geburt
 OMD.CPR.birthsM=Daten zur Geburt (*)
 OMD.CPR.deathplace=gestorben in
@@ -293,7 +296,7 @@ Webpage.search.result.label.profkat_last_faculty_class=zuletzt
 Webpage.search.result.label.profkat_status_msg=Status
 
 Webpage.search.title.profkat-simple.xed=Einfache Suche
-Webpage.search.title.profkat-extended.xed=Komplexe Suche
+Webpage.search.title.profkat-extended.xed=Erweiterte Suche
 Webpage.search.title.profkat-searchbox.xed=Suche
 
 
