added searchfield definitions and mappings (migration from searchfields.xml to SOLR)
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@32911 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -278,22 +278,22 @@ Webpage.searchresults.sortfield.rostockdate_ibis=in Rostock bis
 Webpage.searchresults.sortfield.class_fac_sort=Fakultät
 Webpage.searchresults.sortfield.profstates=Status
 Webpage.searchresults.sortfield.modified=letzte Änderung
-Webpage.searchresults.sortfield.profkat_idx_headline=Name, Vorname
+Webpage.searchresults.sortfield.profkat.idx_headline=Name, Vorname
 
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
 
 Webpage.indexbrowser.profkat.title=Personen von A - Z
 Webpage.indexbrowser.profkat.intro=Dieser Index enthält die Namen der Personen die im Professorenkatalog aufgeführt sind.
-Webpage.indexbrowser.profkat.label.profkat_period=Prof. in Rostock
-Webpage.indexbrowser.profkat.label.profkat_last_professorship=zuletzt
-Webpage.indexbrowser.profkat.label.profkat_last_faculty_class=zuletzt
-Webpage.indexbrowser.profkat.label.profkat_state_msg=Status
+Webpage.indexbrowser.profkat.label.profkat.period=Prof. in Rostock
+Webpage.indexbrowser.profkat.label.profkat.last_professorship=zuletzt
+Webpage.indexbrowser.profkat.label.profkat.last_faculty_class=zuletzt
+Webpage.indexbrowser.profkat.label.profkat.state_msg=Status
 
-Webpage.search.result.label.profkat_period=Prof. in Rostock
-Webpage.search.result.label.profkat_last_professorship=zuletzt
-Webpage.search.result.label.profkat_last_faculty_class=zuletzt
-Webpage.search.result.label.profkat_status_msg=Status
+Webpage.search.result.label.profkat.period=Prof. in Rostock
+Webpage.search.result.label.profkat.last_professorship=zuletzt
+Webpage.search.result.label.profkat.last_faculty_class=zuletzt
+Webpage.search.result.label.profkat.status_msg=Status
 
 Webpage.search.title.profkat-simple.xed=Einfache Suche
 Webpage.search.title.profkat-extended.xed=Erweiterte Suche
