--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -289,6 +289,7 @@ Webpage.indexbrowser.profkat.label.profkat.period=Prof. in Rostock
 Webpage.indexbrowser.profkat.label.profkat.last_professorship=zuletzt
 Webpage.indexbrowser.profkat.label.profkat.last_faculty_class=zuletzt
 Webpage.indexbrowser.profkat.label.profkat.state_msg=Status
+Webpage.indexbrowser.profkat.label.profkat.lifetime=Lebensdaten
 
 Webpage.search.result.label.profkat.period=Prof. in Rostock
 Webpage.search.result.label.profkat.last_professorship=zuletzt
