--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -138,9 +138,10 @@ OMD.CPR.academicdegree.display.other=andere
 
 OMD.CPR.membership.party=Parteimitgliedschaft
 
-OMD.derivatelabel.profkat_person=default,display_image,display_biography,display_none
+OMD.derivatelabel.profkat_person=default,display_portrait,display_signature,display_biography,display_none
 OMD.derivatelabel.profkat_person.default=
-OMD.derivatelabel.profkat_person.display_image=als Bild anzeigen
+OMD.derivatelabel.profkat_person.display_portrait=als Portrait anzeigen
+OMD.derivatelabel.profkat_person.display_signature=als Unterschrift anzeigen
 OMD.derivatelabel.profkat_person.display_biography=als Biogr. Artikel anzeigen
 OMD.derivatelabel.profkat_person.display_none = keine Anzeige
 
