--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -279,18 +279,18 @@ Webpage.searchresults.sortfield.rostockdate_ibis=in Rostock bis
 Webpage.searchresults.sortfield.class_fac_sort=Fakultät
 Webpage.searchresults.sortfield.profstates=Status
 Webpage.searchresults.sortfield.modified=letzte Änderung
-Webpage.searchresults.sortfield.profkat.idx_headline=Name, Vorname
+Webpage.searchresults.sortfield.profkat.idx_profname.headline=Name, Vorname
 
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
 
-Webpage.indexbrowser.profkat.title=Personen von A - Z
-Webpage.indexbrowser.profkat.intro=Dieser Index enthält die Namen der Personen die im Professorenkatalog aufgeführt sind.
-Webpage.indexbrowser.profkat.label.profkat.period=Prof. in Rostock
-Webpage.indexbrowser.profkat.label.profkat.last_professorship=zuletzt
-Webpage.indexbrowser.profkat.label.profkat.last_faculty_class=zuletzt
-Webpage.indexbrowser.profkat.label.profkat.state_msg=Status
-Webpage.indexbrowser.profkat.label.profkat.lifetime=Lebensdaten
+Webpage.indexbrowser.profname.title=Personen von A - Z
+Webpage.indexbrowser.profname.intro=Dieser Index enthält die Namen der Personen die im Professorenkatalog aufgeführt sind.
+Webpage.indexbrowser.profname.label.profkat.period=Prof. in Rostock
+Webpage.indexbrowser.profname.label.profkat.last_professorship=zuletzt
+Webpage.indexbrowser.profname.label.profkat.last_faculty_class=zuletzt
+Webpage.indexbrowser.profname.label.profkat.state_msg=Status
+Webpage.indexbrowser.profname.label.profkat.lifetime=Lebensdaten
 
 Webpage.search.result.label.profkat.period=Prof. in Rostock
 Webpage.search.result.label.profkat.last_professorship=zuletzt
