--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -11,7 +11,8 @@ Nav.DigitalisatDetails=Details über die Digitalisate
 Nav.ClassificationsSearch=Browsen
 Nav.Browse.Profkat.Subject=Fachgebiete
 Nav.Browseresults=Browsingergebnisse
-Nav.Browse.Profkat.Historigin=Fakultät/Sektion
+Nav.Browse.Profkat.Institution=Fakultät/Sektion
+Nav.Browse.Profkat.Epoch=Epochen
 Nav.Sitemap=Sitemap
 Nav.Impressum=Impressum
 Nav.Login=Login
@@ -279,7 +280,7 @@ Webpage.searchresults.sortfield.rostockdate_ibis=in Rostock bis
 Webpage.searchresults.sortfield.class_fac_sort=Fakultät
 Webpage.searchresults.sortfield.profstates=Status
 Webpage.searchresults.sortfield.modified=letzte Änderung
-Webpage.searchresults.sortfield.profkat.idx_profname.headline=Name, Vorname
+Webpage.searchresults.sortfield.profkat.idx_profkat=Name, Vorname
 
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
@@ -291,6 +292,10 @@ Webpage.indexbrowser.profname.label.profkat.last_professorship=zuletzt
 Webpage.indexbrowser.profname.label.profkat.last_faculty_class=zuletzt
 Webpage.indexbrowser.profname.label.profkat.state_msg=Status
 Webpage.indexbrowser.profname.label.profkat.lifetime=Lebensdaten
+
+Webpage.classbrowser.institution.title=Über Fakultäten/Sektionen browsen
+Webpage.classbrowser.subject.title=Über Fachgebiete browsen
+Webpage.classbrowser.epoch.title=Über Epochen browsen
 
 Webpage.search.result.label.profkat.period=Prof. in Rostock
 Webpage.search.result.label.profkat.last_professorship=zuletzt
@@ -306,8 +311,6 @@ Webpage.search.title.profkat-searchbox.xed=Suche
 Webpage.editor.title.simple=Einfache Suche über die Daten im Professorenkatalog
 Webpage.editor.title.extended=Erweiterte Suche über die Daten im Professorenkatalog
 Webpage.editor.title.editor.searchmasks.SearchMask_ProfessorumEdit.xml=Suchmaske für Editoren des Professorenkatalogs
-Webpage.browse.title.histfac=Über Fakultäten/Sektionen browsen
-Webpage.browse.title.subject=Über Fachgebiete browsen
 
 Webpage.Search.Possibilities=Es stehen Ihnen folgende Möglichkeiten zur Verfügung:
 
