start rewrite of frontend for search and indexbrowsing
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@33029 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -280,27 +280,22 @@ Webpage.searchresults.sortfield.rostockdate_ibis=in Rostock bis
 Webpage.searchresults.sortfield.class_fac_sort=Fakultät
 Webpage.searchresults.sortfield.profstates=Status
 Webpage.searchresults.sortfield.modified=letzte Änderung
-Webpage.searchresults.sortfield.profkat.idx_profkat=Name, Vorname
+Webpage.searchresults.sortfield.profkat.idx_profname.headline=Name, Vorname
 
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
 
 Webpage.indexbrowser.profname.title=Personen von A - Z
 Webpage.indexbrowser.profname.intro=Dieser Index enthält die Namen der Personen die im Professorenkatalog aufgeführt sind.
-Webpage.indexbrowser.profname.label.profkat.period=Prof. in Rostock
-Webpage.indexbrowser.profname.label.profkat.last_professorship=zuletzt
-Webpage.indexbrowser.profname.label.profkat.last_faculty_class=zuletzt
-Webpage.indexbrowser.profname.label.profkat.state_msg=Status
-Webpage.indexbrowser.profname.label.profkat.lifetime=Lebensdaten
+Webpage.searchresult.person.label.profkat.period=Prof. in Rostock
+Webpage.searchresult.person.label.profkat.last_professorship=zuletzt
+Webpage.searchresult.person.label.profkat.last_faculty_class=zuletzt
+Webpage.searchresult.person.label.profkat.state_msg=Status
+Webpage.searchresult.person.label.profkat.lifetime=Lebensdaten
 
 Webpage.classbrowser.institution.title=Über Fakultäten/Sektionen browsen
 Webpage.classbrowser.subject.title=Über Fachgebiete browsen
 Webpage.classbrowser.epoch.title=Über Epochen browsen
-
-Webpage.search.result.label.profkat.period=Prof. in Rostock
-Webpage.search.result.label.profkat.last_professorship=zuletzt
-Webpage.search.result.label.profkat.last_faculty_class=zuletzt
-Webpage.search.result.label.profkat.status_msg=Status
 
 Webpage.search.title.profkat-simple.xed=Einfache Suche
 Webpage.search.title.profkat-extended.xed=Erweiterte Suche
