switch url-binding from "/search.action" to "/search/{mask}
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@33046 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -297,9 +297,9 @@ Webpage.classbrowser.institution.title=Über Fakultäten/Sektionen browsen
 Webpage.classbrowser.subject.title=Über Fachgebiete browsen
 Webpage.classbrowser.epoch.title=Über Epochen browsen
 
-Webpage.search.title.profkat-simple.xed=Einfache Suche
-Webpage.search.title.profkat-extended.xed=Erweiterte Suche
-Webpage.search.title.profkat-searchbox.xed=Suche
+Webpage.search.title.profkat-simple=Einfache Suche
+Webpage.search.title.profkat-extended=Erweiterte Suche
+Webpage.search.title.profkat-bar=Suche
 
 
 
