--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -286,7 +286,7 @@ Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
 
 Webpage.indexbrowser.profname.title=Personen von A - Z
-Webpage.indexbrowser.profname.intro=Dieser Index enthält die Namen der Personen die im Professorenkatalog aufgeführt sind.
+Webpage.indexbrowser.profname.intro=Dieser Index enthält die Namen der Personen, die im Professorenkatalog aufgeführt sind.
 Webpage.searchresult.person.label.profkat.period=Prof. in Rostock
 Webpage.searchresult.person.label.profkat.last_professorship=zuletzt
 Webpage.searchresult.person.label.profkat.last_faculty_class=zuletzt
