show xml button
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@33125 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -310,6 +310,7 @@ Webpage.editor.title.editor.searchmasks.SearchMask_ProfessorumEdit.xml=Suchmaske
 Webpage.Search.Possibilities=Es stehen Ihnen folgende Möglichkeiten zur Verfügung:
 
 Webpage.feedback=Fehler / Änderungsvorschläge / Kommentare
+Webpage.showXML=Datensatz als XML anzeigen
 WF.workspace=Arbeitsmappe
 WF.professorum=Arbeitsmappe CPR
 WF.professorum.ActualStateOfYourDocument=Aktueller Bearbeitungsstand bei der Veröffentlichung eines CPR Dokuments. 
