--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -1,6 +1,18 @@
-Nav.Aktuelles=Aktuelles
+
 Nav.Start=Start
+
 Nav.Profkat.Index=Personenindex
+Nav.Profkat.Epochs=Epochenzugang
+Nav.Profkat.Aktuelles=Aktuelles
+
+Nav.Profkat.Search=Suche
+Nav.Profkat.Search.Simple=Einfach
+Nav.Profkat.Search.Extended=Erweitert
+Nav.Profkat.Search.Subject=nach Fachgebiet
+Nav.Profkat.Search.Institution=nach Fakultät/Sektion
+
+
+
 Nav.DocumentDetails=Detailansicht
 Nav.Search=Suchen
 Nav.SearchAll=Metadatensuche
