--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_en.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_en.properties
@@ -2,7 +2,16 @@ Nav.Aktuelles                   = news
 Nav.Start                       = start
 Nav.Browse.Profkat.Subject      = subjects
 Nav.Start                       = start
-Nav.Profkat.Index               = staff index
+Nav.Profkat.Index=Person index
+Nav.Profkat.Aktuelles=News
+
+Nav.Profkat.Search=Search
+Nav.Profkat.Search.Simple=Simple
+Nav.Profkat.Search.Extended=Extended
+Nav.Profkat.Search.Subject=by Subject
+Nav.Profkat.Search.Institution=by Institution
+
+
 Nav.DocumentDetails             = detailed view
 Nav.Search                      = search
 Nav.SearchAll                   = search meta data
