--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -286,13 +286,13 @@ Webpage.searchresults.sort-rostockdate-from=in Rostock von / seit
 Webpage.searchresults.sort-rostockdate-to=in Rostock bis
 Webpage.searchresults.sort-cpr_histfac_sort=Fakultät
      
-Webpage.searchresults.sortfield.profsortname=Name, Vorname
-Webpage.searchresults.sortfield.rostockdate_ivon=in Rostock von / seit
-Webpage.searchresults.sortfield.rostockdate_ibis=in Rostock bis
 Webpage.searchresults.sortfield.class_fac_sort=Fakultät
 Webpage.searchresults.sortfield.profstates=Status
 Webpage.searchresults.sortfield.modified=letzte Änderung
 Webpage.searchresults.sortfield.profkat.idx_profname.headline=Name, Vorname
+Webpage.searchresults.sortfield.profkat.proftime_ivon=in Rostock von / seit
+Webpage.searchresults.sortfield.profkat.proftime_ibis=in Rostock bis
+
 
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
