Anpassung am Editor für Braunschweig
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@34222 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -158,6 +158,14 @@ OMD.derivatelabel.profkat_person.display_signature=als Unterschrift anzeigen
 OMD.derivatelabel.profkat_person.display_biography=als Biogr. Artikel anzeigen
 OMD.derivatelabel.profkat_person.display_none = keine Anzeige
 
+OMD.CPB.adminfunction.direktor=Direktor
+OMD.CPB.adminfunction.rektor=Rektor
+OMD.CPB.adminfunction.praesident=Präsident/in
+OMD.CPB.adminfunction.direktor_brh=Direktor (BRH)
+OMD.CPB.adminfunction.direktor_ph=Direktor (PH)
+OMD.CPB.adminfunction.rektor_ph=Rektor (PH)
+OMD.CPB.adminfunction.dekan_ph=Dekan (PH)
+
 
 OMD.CPR.academictitles.info=aktueller bzw. zuletzt gültiger, vollständiger akademischer Titel
 OMD.CPR.professorships.info=alle Professuren/Dozenturen, Neu- und Umberufungen an der Univ. Rostock, mit Angabe der genauen Zeiträume (Jahre) und Berufungs-/Fachgebiete; bei nicht an der Univ. beschäftigten "externen" (Honorar-, apl.-, Titular-) Professoren Angabe nur des Ernennungsjahres
