--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_en.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_en.properties
@@ -117,6 +117,14 @@ OMD.CPR.states.short            = short entry
 OMD.CPR.states.document         = document entry
 OMD.CPR.states.other            = other
 
+OMD.CPB.adminfunction.direktor=Direktor
+OMD.CPB.adminfunction.rektor=Rektor
+OMD.CPB.adminfunction.praesident=Präsident/in
+OMD.CPB.adminfunction.direktor_brh=Direktor (BRH)
+OMD.CPB.adminfunction.direktor_ph=Direktor (PH)
+OMD.CPB.adminfunction.rektor_ph=Rektor (PH)
+OMD.CPB.adminfunction.dekan_ph=Dekan (PH)
+
 Webpage.intro.professorum.Subtitle1 = input of CPR data
 Webpage.intro.professorum.Text1 = Please create first the meta data \
                   and the upload necessary documents. \
