weitere funktionen für Braunschweig
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@34225 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_en.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_en.properties
@@ -119,7 +119,9 @@ OMD.CPR.states.other            = other
 
 OMD.CPB.adminfunction.direktor=Direktor
 OMD.CPB.adminfunction.rektor=Rektor
+OMD.CPB.adminfunction.prorektor=Prorektor
 OMD.CPB.adminfunction.praesident=Präsident/in
+OMD.CPB.adminfunction.vizepraesident=Vizepräsident/in
 OMD.CPB.adminfunction.direktor_brh=Direktor (BRH)
 OMD.CPB.adminfunction.direktor_ph=Direktor (PH)
 OMD.CPB.adminfunction.rektor_ph=Rektor (PH)
