--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -160,7 +160,9 @@ OMD.derivatelabel.profkat_person.display_none = keine Anzeige
 
 OMD.CPB.adminfunction.direktor=Direktor
 OMD.CPB.adminfunction.rektor=Rektor
+OMD.CPB.adminfunction.prorektor=Prorektor
 OMD.CPB.adminfunction.praesident=Präsident/in
+OMD.CPB.adminfunction.vizepraesident=Vizepräsident/in
 OMD.CPB.adminfunction.direktor_brh=Direktor (BRH)
 OMD.CPB.adminfunction.direktor_ph=Direktor (PH)
 OMD.CPB.adminfunction.rektor_ph=Rektor (PH)
