--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -162,6 +162,9 @@ OMD.profkat.quoting=Empfohlene Zitierweise
 OMD.profkat.quoting.text=Eintrag von &quot;{0}&quot; im Professorenkatalog,<br /> URL\: <a href\="{1}">{1}</a> <br/>(abgerufen am {2})
 OMD.profkat.quoting.gnd=[GND-Link auf diese Seite: <a href\="{0}">{0}</a>]
 
+OMD.profkat.hint.predec=Nachfolger
+OMD.profkat.hint.succ=Vorgänger
+
 OMD.profkat.hint.name=Name
 OMD.profkat.hint.profession=Beruf
 OMD.profkat.hint.nameSurnameM=Nachname (*)
