show "short term" for institution classification
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35080 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -162,8 +162,8 @@ OMD.profkat.quoting=Empfohlene Zitierweise
 OMD.profkat.quoting.text=Eintrag von &quot;{0}&quot; im Professorenkatalog,<br /> URL\: <a href\="{1}">{1}</a> <br/>(abgerufen am {2})
 OMD.profkat.quoting.gnd=[GND-Link auf diese Seite: <a href\="{0}">{0}</a>]
 
-OMD.profkat.hint.predec=Nachfolger
-OMD.profkat.hint.succ=Vorgänger
+OMD.profkat.hint.predec=Vorgänger
+OMD.profkat.hint.succ=Nachfolger
 
 OMD.profkat.hint.name=Name
 OMD.profkat.hint.profession=Beruf
@@ -338,7 +338,7 @@ Webpage.indexbrowser.profname.title=Personen von A - Z
 Webpage.indexbrowser.profname.intro=Dieser Index enthält die Namen der Personen, die im Professorenkatalog aufgeführt sind.
 Webpage.searchresult.person.label.profkat.period=Prof. in Rostock
 Webpage.searchresult.person.label.profkat.last_professorship=zuletzt
-Webpage.searchresult.person.label.profkat.last_faculty_class=zuletzt
+Webpage.searchresult.person.label.profkat.last_faculty=zuletzt
 Webpage.searchresult.person.label.profkat.state_msg=Status
 Webpage.searchresult.person.label.profkat.lifetime=Lebensdaten
 
