minor changes in 2 searchfields for complex search
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35104 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -75,7 +75,7 @@ OMD.profkat.professorships=Prof. in Rostock
 OMD.profkat.faculties=Fakultät
 OMD.profkat.facultiesM=Fakultät (*)
 OMD.profkat.institutes=Institut
-OMD.profkat.fieldofstudies=Lehr- und<br />Forschungsgebiete
+OMD.profkat.fieldofstudies=Lehr- und <br />Forschungsgebiete
 OMD.profkat.subjects=Fachgebiet
 OMD.profkat.emails=E-Mail-Adresse
 OMD.profkat.homepages=Homepage
@@ -88,10 +88,11 @@ OMD.profkat.birthsM=Daten zur Geburt (*)
 OMD.profkat.deathplace=gestorben in
 OMD.profkat.deaths=Daten zum Tode
 OMD.profkat.confessions=Konfession
+OMD.profkat.profarea=Berufungsgebiet
 
 OMD.profkat.otherinfos=weitere Informationen
 OMD.profkat.mainpublications=Werke (Auswahl)
-OMD.profkat.bibliographicrefs=Nachweis von<br />Publikationen
+OMD.profkat.bibliographicrefs=Nachweis von <br />Publikationen
 OMD.profkat.complexrefs=Komplexe Verlinkung
 OMD.profkat.sources=Quellen
 OMD.profkat.references=weitere Literatur
@@ -224,7 +225,7 @@ OMD.profkat.biographic.otherprofessorship=weitere Professur
 OMD.profkat.biographic.school=Schule
 OMD.profkat.biographic.studies=Studium
 
-OMD.profkat.academicdegrees=akademische<br />Abschlüsse
+OMD.profkat.academicdegrees=akademische <br />Abschlüsse
 OMD.profkat.academicdegree.=
 OMD.profkat.academicdegree.studies=Studium
 OMD.profkat.academicdegree.promotion=Promotion
@@ -242,7 +243,7 @@ OMD.profkat.academicdegree.display.habilitation_bis1934=Habilitation
 OMD.profkat.academicdegree.display.other=anderer
 
 
-OMD.profkat.adminfunctions=akademische<br />Selbstverwaltung
+OMD.profkat.adminfunctions=akademische <br />Selbstverwaltung
 OMD.profkat.adminfunction.=
 OMD.profkat.adminfunction.rektor=Rektor
 OMD.profkat.adminfunction.dekan=Dekan, Sektionsdirektor
@@ -267,7 +268,7 @@ OMD.profkat.otherfunctions=Funktionen
 OMD.profkat.otherfunction.=
 
 OMD.profkat.memberships=Mitgliedschaften
-OMD.profkat.scientific_memberships=wissenschaftliche<br />Mitgliedschaften
+OMD.profkat.scientific_memberships=wissenschaftliche <br />Mitgliedschaften
 OMD.profkat.membership.=
 OMD.profkat.membership.scientific=wissenschaftlich
 OMD.profkat.membership.party=in einer Partei
