beautify person editor
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35425 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -150,7 +150,7 @@ OMD.profkat.onlineres.info=Verknüpfung zu weiteren Internet-Ressourcen über die 
 OMD.profkat.pubres.info=Verküpfung zu weiteren Publikationsdatenbanken über die PND-Nummer.
 OMD.profkat.quoting.info=Verwenden Sie bitte folgende Form, wenn Sie diese Webseite zitieren.
 OMD.profkat.nameaffixes=Namenszusatz
-OMD.profkat.subjectsM=Fachgebiets- klassifikation (*)
+OMD.profkat.subjectsM=Fachgebiets-<br/>klassifikation (*)
 OMD.profkat.fieldofstudiesM=Lehr- und Forschungsgebiete (*)
 OMD.profkat.professorshipsM=Professuren (*)
 OMD.profkat.awards=Ehrungen
@@ -160,7 +160,7 @@ OMD.profkat.periods=Zeitraum gesamt
 OMD.profkat.periodsM=Zeitraum gesamt (*)
 OMD.profkat.quoting=Empfohlene Zitierweise
 
-OMD.profkat.quoting.text=Eintrag von &quot;{0}&quot; im Professorenkatalog,<br /> URL\: <a href\="{1}">{1}</a> <br/>(abgerufen am {2})
+OMD.profkat.quoting.text=Eintrag von &quot;{0}&quot; im Professorenkatalog,<br /> URL\: <a href\="{1}">{1}</a> (abgerufen am {2})
 OMD.profkat.quoting.gnd=[GND-Link auf diese Seite: <a href\="{0}">{0}</a>]
 
 OMD.profkat.hint.predec=Vorgänger
@@ -280,7 +280,7 @@ OMD.profkat.identifiers=Externe IDs
 OMD.profkat.identifiersM=Externe IDs (*)
 
 OMD.profkat.identifier.=
-OMD.profkat.identifier.gnd=GND-Nummer
+OMD.profkat.identifier.gnd=GND-Nr.
 OMD.profkat.identifier.nognd=Eintrag noch nicht mit der Gemeinsamen Normdatei (GND) verknüpft.
 
 
