PROKA-17 #comment new field in datamodel and editor "partymember"
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35479 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -283,6 +283,10 @@ OMD.profkat.identifier.=
 OMD.profkat.identifier.gnd=GND-Nr.
 OMD.profkat.identifier.nognd=Eintrag noch nicht mit der Gemeinsamen Normdatei (GND) verknüpft.
 
+OMD.profkat.partymembers=Parteimitgliedschaft
+OMD.profkat.partymember=,
+OMD.profkat.partymember.=
+
 
 
 OMD.profkat.typeM=Personentyp (*)
