PROKA-19 #comment added field in message properties
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35484 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -225,6 +225,7 @@ OMD.profkat.biographic.otherprofessorship=weitere Professur
 OMD.profkat.biographic.school=Schule
 OMD.profkat.biographic.studies=Studium
 
+OMD.profkat.schools=Schule
 OMD.profkat.academicdegrees=akademische <br />Abschlüsse
 OMD.profkat.academicdegree.=
 OMD.profkat.academicdegree.studies=Studium
