display academic title in search result
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35531 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -213,6 +213,12 @@ OMD.profkat.family.=
 OMD.profkat.family.other=andere
 OMD.profkat.family.father=Vater
 OMD.profkat.family.mother=Mutter
+OMD.profkat.family.husband=Ehemann
+OMD.profkat.family.wife=Ehefrau
+OMD.profkat.family.son=Sohn
+OMD.profkat.family.daughter=Tocher
+OMD.profkat.family.brother=Bruder
+OMD.profkat.family.sister=Schwester
 
 OMD.profkat.family.display.=
 OMD.profkat.family.display.other=
@@ -342,6 +348,7 @@ Webpage.gotoContents=zum Seiteninhalt springen
 
 Webpage.indexbrowser.profname.title=Personen von A - Z
 Webpage.indexbrowser.profname.intro=Dieser Index enthält die Namen der Personen, die im Professorenkatalog aufgeführt sind.
+Webpage.searchresult.person.label.profkat.academictitle=akadem. Titel
 Webpage.searchresult.person.label.profkat.period=Prof. in Rostock
 Webpage.searchresult.person.label.profkat.last_professorship=zuletzt
 Webpage.searchresult.person.label.profkat.last_faculty=zuletzt
