change labels of mandatory fields
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35892 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -169,7 +169,9 @@ OMD.profkat.hint.succ=Nachfolger
 OMD.profkat.hint.name=Name
 OMD.profkat.hint.profession=Beruf
 OMD.profkat.hint.nameSurnameM=Nachname (*)
+OMD.profkat.hint.nameSurname=Nachname
 OMD.profkat.hint.nameFirstnameM=Vorname (*)
+OMD.profkat.hint.nameFirstname=Vorname
 OMD.profkat.hint.nameTitle=akad. Titel
 OMD.profkat.hint.dateShown=Datum (angezeigt)
 OMD.profkat.hint.dateFrom=Datum (nicht vor)
@@ -297,7 +299,7 @@ OMD.profkat.partymember.=
 
 
 OMD.profkat.typeM=Personentyp (*)
-
+OMD.profkat.type=Personentyp
 #OMD.profkat.show-gbv-links=Link zum GBV
 #OMD.profkat.show-gbv-links.false=nicht anzeigen
 #OMD.profkat.show-gbv-links.true=anzeigen
