new texts for info fields
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35917 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -115,40 +115,6 @@ OMD.derivatelabel.profkat_person.display_signature=als Unterschrift anzeigen
 OMD.derivatelabel.profkat_person.display_biography=als Biogr. Artikel anzeigen
 OMD.derivatelabel.profkat_person.display_none = keine Anzeige
 
-OMD.profkat.academictitles.info=aktueller bzw. zuletzt gültiger, vollständiger akademischer Titel
-OMD.profkat.professorships.info=alle Professuren/Dozenturen, Neu- und Umberufungen an der Univ. Rostock, mit Angabe der genauen Zeiträume (Jahre) und Berufungs-/Fachgebiete; bei nicht an der Univ. beschäftigten "externen" (Honorar-, apl.-, Titular-) Professoren Angabe nur des Ernennungsjahres
-OMD.profkat.faculties.info=alle Zugehörigkeiten zu Fakultäten/Sektionen gemäß einer historischen Fakultätensystematik, mit Angabe der genauen Zeiträume der Zugehörigkeit; in Klammern dahinter jeweils der Zeitraum des Bestehens der Fakultät/Sektion unter diesem Namen
-OMD.profkat.institutes.info=Zugehörigkeiten zu Instituten/Kliniken/Bereichen; bei Wechsel des Instituts Angabe des Zeitraums; in Klammern dahinter Veränderungen des Institutsnamens
-OMD.profkat.fieldofstudies.info=frei formulierte Stichworte zu Schwerpunkten der wiss. Tätigkeit 
-OMD.profkat.subjects.info=Zuordnung zu einem oder mehreren Fachgebieten gemäß einer Fachgebietssystematik (in Anlehnung an die Basisklassifikation des GBV)
-OMD.profkat.emails.info
-OMD.profkat.sex.info=Angaben zum Geschlecht
-OMD.profkat.homepages.info=Links zu aktuellen Internetseiten (persönlich, dienstlich, institutionell)
-OMD.profkat.surnames.info=abweichende Nachnamensformen, Pseudonyme, Namensänderungen, Geburtsnamen, Latinisierungen bzw. deutsche Formen
-OMD.profkat.firstnames.info
-OMD.profkat.lifetimes.info=Geburts- und Sterbedatum oder -jahr, Geburts- und Sterbeort/-region
-OMD.profkat.confessions.info
-OMD.profkat.fathers.info=Name, ggf. Lebensjahre und/oder Beruf des Vaters
-OMD.profkat.mothers.info=Name, ggf. Lebensjahre und/oder Beruf der Mutter
-OMD.profkat.families.info=relevante Angaben zu Ehe, Kindern und Verwandschaft, insbesondere Verwandte innerhalb der Rostocker Professoren
-OMD.profkat.biographics.info=möglichst lückenlose Aufführung der hauptsächlichen Lebensstationen: Schule/Abitur, Ausbildung/Studium mit Fächern und Studienorten, berufliche Tätigkeiten/Karriere, sonstige wichtige Informationen
-OMD.profkat.academicdegrees.info=akademische Ausbildung anhand der erworbenen Abschlüsse: Art, Jahr, akad. Grad, ggf. Fachgebiet, Hochschule, ggf. Titel der Qualifikationsarbeit
-OMD.profkat.adminfunctions.info=Ämter und Funktionen an der Univ. Rostock während der Professur: Rektor, Prorektor, Dekan, Prodekan, Sektionsdirektor, Leiter von Instituten, Kliniken, Laboren etc.; Mitglied in Gremien (Senat, Konzil etc.) und Kommissionen, Tätigkeiten in Studien- und Forschungsorganisation
-OMD.profkat.otherfunctions.info=Ämter, Funktionen, Tätigkeiten in Wissenschaft, Politik, Wirtschaft, Gesellschaft, Kultur etc.
-OMD.profkat.memberships.info=Mitgliedschaften in wissenschaftlichen und anderen Gesellschaften, Vereinen, Akademien etc.
-OMD.profkat.awards.info=wichtigere wissenschaftliche und andere Auszeichnungen, Preise; Ehrendoktorate, -professren, -mitgliedschaften
-OMD.profkat.otherinfos.info=sonstige Angaben, die wichtig erscheinen, aber nicht in die Rubriken einzuordnen sind
-OMD.profkat.mainpublications.info=Auswahl von einigen Publikationen: "Hauptwerke", umfangreichere oder neuere Arbeiten oder solche, die repräsentativ für die verschiedenen Forschungsfelder sind
-OMD.profkat.bibliographicrefs.info=Verknüpfung zu Datenbanken, die Publikationen des Professors nachweisen, v.a. Katalog des Verbunds norddeutscher Bibliotheken (GBV), Rostocker Universitätsbibliographie, Landesbibliographie M-V, Katalog der Deutschen Nationalbibliothek (DNB, über die Nummer in der Personennamendatei (PND)), sonstige Fachdatenbanken
-OMD.profkat.sources.info=hauptsächlich für die Erstellung des Eintrags verwendete Quellen: "eigene Angaben" der Professoren bzw. Angehöriger, Personalakten und Literatur
-OMD.profkat.references.info=Autobiographien, ausführlichere und neuere biographische Literatur, Verknüpfungen mit im Internet verfügbaren Digitalisaten, Lexika, biographischen Datenbanken etc. (ADB/NDB, Wikipedia, DBE, DBA(WBIS), Achtung: zum Teil lizenzpflichtig und zurzeit nur aus dem Univ.netz verfügbar)
-OMD.profkat.documents.info=Anzeige von Volltexten oder digitalen Faksimiles von vorhandenen Kurzbiographien direkt in der Detailansicht des Eintrags (Dokumenteinträge)
-OMD.profkat.derobjects.info=Dokumente mit weiterführenden Informationen zur Person, Anzeige/Download als eigene Dateien (meist pdf, jpg): Bild, Lebenslauf, Schriftenverzeichnis, Scans von Dokumenten aus den Personalakten, Digitalisate von biographischer Literatur (Nachrufe, Laudationes, kleinere Artikel)
-OMD.profkat.created_changed.info=Datum und Benutzername der Erstellung und letzten Bearbeitung des Eintrags	
-OMD.profkat.link2page.info=permanenter Link zu dieser Seite; Bitte nur diese Internetadresse für Zitate und Verlinkungen benutzen!!!
-OMD.profkat.onlineres.info=Verknüpfung zu weiteren Internet-Ressourcen über die PND-Nummer.
-OMD.profkat.pubres.info=Verküpfung zu weiteren Publikationsdatenbanken über die PND-Nummer.
-OMD.profkat.quoting.info=Verwenden Sie bitte folgende Form, wenn Sie diese Webseite zitieren.
 OMD.profkat.nameaffixes=Namenszusatz
 OMD.profkat.subjectsM=Fachgebiets-<br/>klassifikation (*)
 OMD.profkat.fieldofstudiesM=Lehr- und Forschungsgebiete (*)
@@ -400,4 +366,38 @@ WF.professorum.status.processInitialized=Workflow zum Erstellen eines neuen Doku
 WF.professorum.status.wasCommitmentSuccessful=Das Dokument kann veröffentlicht werden. Sie werden per E-Mail informiert, sobald dies geschehen ist.
 WF.professorum.taskCompleteDocumentAndSendToLibrary=Absenden der vollständigen Daten an die Bibliothek
 
+OMD.profkat.academicdegrees.info=akademische Ausbildung anhand der erworbenen Abschlüsse: Art, Jahr, akad. Grad, ggf. Fachgebiet, Hochschule, ggf. Titel der Qualifikationsarbeit
+OMD.profkat.academictitles.info=aktueller bzw. zuletzt gültiger, vollständiger akademischer Titel
+OMD.profkat.adminfunctions.info=Ämter und Funktionen an der Univ. Rostock während der Professur: Rektor, Prorektor, Dekan, Prodekan, Sektionsdirektor, Leiter von Instituten, Kliniken, Laboren etc.; Mitglied in Gremien (Senat, Konzil etc.) und Kommissionen, Tätigkeiten in Studien- und Forschungsorganisationen
+OMD.profkat.awards.info=wichtigere wissenschaftliche und andere Auszeichnungen, Preise; Ehrendoktorate, -professoren, -mitgliedschaften
+OMD.profkat.bibliographicrefs.info=Verknüpfung zu Datenbanken, die Publikationen des Professors nachweisen, v.a. Gemeinsamer Verbundkatalog (GVK), Rostocker Universitätsbibliographie, Landesbibliographie M-V, Katalog der Deutschen Nationalbibliothek (DNB), Portale, die ebenfalls die GND nutzen, sonstige Fachdatenbanken
+OMD.profkat.biographics.info=möglichst lückenlose Aufführung der hauptsächlichen Lebensstationen: Schule/Abitur, Ausbildung/Studium mit Fächern und Studienorten, berufliche Tätigkeiten/Karriere, sonstige wichtige Informationen
+OMD.profkat.confessions.info=bis einschließlich des 19. Jahrhunderts nur \u201Elutherisch\u201C, \u201Ereformiert\u201C, \u201Ekatholisch\u201C angegeben
+OMD.profkat.created_changed.info=Datum und Benutzername der Erstellung und letzten Bearbeitung des Eintrags
+OMD.profkat.derobjects.info=Dokumente mit weiterführenden Informationen zur Person, Anzeige/Download als eigene Dateien (meist pdf, jpg): Bild, Lebenslauf, Schriftenverzeichnis, Scans von Dokumenten aus den Personalakten, Digitalisate von biographischer Literatur (Nachrufe, Laudationes, kleinere Artikel)
+OMD.profkat.documents.info=Anzeige von Volltexten oder digitalen Faksimiles von vorhandenen Kurzbiographien direkt in der Detailansicht des Eintrags (Dokumenteinträge)
+OMD.profkat.emails.info=
+OMD.profkat.faculties.info=alle Zugehörigkeiten zu Fakultäten/Sektionen gemäß einer historischen Fakultätensystematik, mit Angabe der genauen Zeiträume der Zugehörigkeit
+OMD.profkat.families.info=Lebensdaten und Beruf der Eltern sowie anderer relevanter Verwandter, insbesondere innerhalb der Rostocker Professorenschaft
+OMD.profkat.fathers.info=Name, ggf. Lebensjahre und/oder Beruf des Vaters
+OMD.profkat.fieldofstudies.info=frei formulierte Stichworte zu Schwerpunkten der wiss. Tätigkeit
+OMD.profkat.firstnames.info=Nennung weiterer Vornamen in Reihenfolge gemäß der Quellen
+OMD.profkat.homepages.info=Links zu aktuellen Internetseiten (persönlich, dienstlich, institutionell)
+OMD.profkat.institutes.info=Zugehörigkeiten zu Instituten/Kliniken/Bereichen; bei Wechsel des Instituts Angabe des Zeitraums; in Klammern dahinter Veränderungen des Institutsnamens
+OMD.profkat.lifetimes.info=Geburtsdatum und -ort, Sterbedatum und -ort (ggf. Region); Unklarheiten in Fragezeichen
+OMD.profkat.link2page.info=permanenter Link zu dieser Seite; Bitte nur diese Internetadresse für Zitate und Verlinkungen benutzen\!\!\!
+OMD.profkat.mainpublications.info=Auswahl von einigen Publikationen: "Hauptwerke", umfangreichere oder neuere Arbeiten oder solche, die repräsentativ für die verschiedenen Forschungsfelder sind
+OMD.profkat.scientific_memberships.info=Mitgliedschaften in wissenschaftlichen und anderen Gesellschaften, Vereinen, Akademien etc.
+OMD.profkat.mothers.info=Name, ggf. Lebensjahre und/oder Beruf der Mutter
+OMD.profkat.onlineres.info=Verknüpfung zu weiteren Internet-Ressourcen über die GND-Nummer.
+OMD.profkat.otherfunctions.info=Ämter, Funktionen, Tätigkeiten in Wissenschaft, Politik, Wirtschaft, Gesellschaft, Kultur etc.
+OMD.profkat.otherinfos.info=sonstige Angaben, die wichtig erscheinen, aber nicht in die Rubriken einzuordnen sind
+OMD.profkat.professorships.info=alle Professuren/Dozenturen, Neu- und Umberufungen an der Univ. Rostock, mit Angabe der genauen Zeiträume (Jahre) und Berufungs-/Fachgebiete; bei nicht an der Univ. beschäftigten "externen" (Honorar-, apl.-, Titular-) Professoren Angabe nur des Ernennungsjahres
+OMD.profkat.pubres.info=Verküpfung zu weiteren Publikationsdatenbanken über die PND-Nummer.
+OMD.profkat.quoting.info=Verwenden Sie bitte folgende Form, wenn Sie diese Webseite zitieren.
+OMD.profkat.references.info=Autobiographien, ausführlichere und neuere biographische Literatur, Verknüpfungen mit im Internet verfügbaren Digitalisaten, Lexika, biographischen Datenbanken etc. (DBE, DBA(WBIS), Achtung: zum Teil lizenzpflichtig und zurzeit nur aus dem Univ.-Netz verfügbar)
+OMD.profkat.sex.info=Angaben zum Geschlecht
+OMD.profkat.sources.info=hauptsächlich für die Erstellung des Eintrags verwendete Quellen: "eigene Angaben" der Professoren bzw. Angehöriger, Personalakten und Literatur
+OMD.profkat.subjects.info=Zuordnung zu einem oder mehreren Fachgebieten gemäß einer Fachgebietssystematik (in Anlehnung an die Basisklassifikation des GVK)
+OMD.profkat.surnames.info=abweichende Nachnamensformen, Pseudonyme, Namensänderungen, Geburtsnamen, Latinisierungen bzw. deutsche Formen
 
