--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -31,7 +31,7 @@ Nav.Login=Login
 Nav.UserDetails=Aktueller Nutzer
 Nav.Logout=Logout
 Nav.WF.Edit=Bearbeiten
-Nav.WF.Preview=Vorschau
+WF.Preview=<strong>Vorschau</strong> aus der Arbeitsmappe
 
 Nav.AdminMenue=Administration
 Nav.Admin.Profkat=Administration Profkat
