buttons in docdetails rearanged
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35970 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -338,9 +338,12 @@ Webpage.editor.title.extended=Erweiterte Suche über die Daten im Professorenkata
 Webpage.editor.title.editor.searchmasks.SearchMask_ProfessorumEdit.xml=Suchmaske für Editoren des Professorenkatalogs
 
 Webpage.Search.Possibilities=Es stehen Ihnen folgende Möglichkeiten zur Verfügung:
-
+Webpage.feedback.button=Ihre Anmerkungen ...
 Webpage.feedback=Fehler / Änderungsvorschläge / Kommentare
-Webpage.showXML=Datensatz als XML anzeigen
+Webpage.print.button=Druck
+Webpage.tools.menu4experts=Expertenmenü einblenden
+Webpage.tools.showXML=Datensatz als XML anzeigen
+Webpage.tools.showSOLR=SOLR-Eingabedokument anzeigen
 WF.professorum=Arbeitsmappe CPR
 WF.professorum.ActualStateOfYourDocument=Aktueller Bearbeitungsstand bei der Veröffentlichung eines CPR Dokuments. 
 WF.professorum.Created=Das leere Dokument für den Catalogus Professorum ist angelegt. Sie können jetzt die Metadaten bearbeiten, die Dokumente hochladen. 
