--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -12,6 +12,9 @@ Nav.Profkat.Search.Subject=nach Fachgebiet
 Nav.Profkat.Search.Institution=nach Fakultät/Sektion
 
 
+OMD.derivate.copyright.notice=<h5>Achtung!</h5> \
+     Die hier bereitgestellten Dokumente und Bilder sind überwiegend urheberrechtlich geschützt. \
+     Wenn Sie Teile davon nutzen wollen, wenden Sie sich bitte an den Betreiber der Webseite.
 
 Nav.DocumentDetails=Detailansicht
 Nav.Search=Suchen
