enhance preview mode of docdetails (back button)
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@36113 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -34,7 +34,8 @@ Nav.Login=Login
 Nav.UserDetails=Aktueller Nutzer
 Nav.Logout=Logout
 Nav.WF.Edit=Bearbeiten
-WF.Preview=<strong>Vorschau</strong> aus der Arbeitsmappe
+WF.Preview=<span class="glyphicon glyphicon-blackboard"></span>&#160;&#160;&#160;<strong>Vorschau</strong>
+WF.Preview.return=zurück zur Arbeitsmappe ...
 
 Nav.AdminMenue=Administration
 Nav.Admin.Profkat=Administration Profkat
