family relationship Schwiegervater / Schwiegersohn
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@36206 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -191,6 +191,8 @@ OMD.profkat.family.son=Sohn
 OMD.profkat.family.daughter=Tocher
 OMD.profkat.family.brother=Bruder
 OMD.profkat.family.sister=Schwester
+OMD.profkat.family.father_in_law=Schwiegervater	
+OMD.profkat.family.son_in_law=Schwiegersohn
 
 OMD.profkat.family.display.=
 OMD.profkat.family.display.other=
