--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -188,7 +188,7 @@ OMD.profkat.family.mother=Mutter
 OMD.profkat.family.husband=Ehemann
 OMD.profkat.family.wife=Ehefrau
 OMD.profkat.family.son=Sohn
-OMD.profkat.family.daughter=Tocher
+OMD.profkat.family.daughter=Tochter
 OMD.profkat.family.brother=Bruder
 OMD.profkat.family.sister=Schwester
 OMD.profkat.family.father_in_law=Schwiegervater	
