Suchfeld für Epochen
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@36386 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -52,6 +52,7 @@ Editor.Search.Label.Institution=Einrichtung
 
 Editor.Search.Label.SubjectProf=Fachklassifikation
 Editor.Search.Label.ProfTypes=Art der Professur
+Editor.Search.Label.Epochs=Epoche
 Editor.Search.Label.ProfStates=Status des Eintrages
 Editor.Search.Label.Professortime=Professor in Rostock
 Editor.Search.Label.Professortime.from=Berufung
